tests/ui/feature-gates/feature-gate-sanitize.rs
#[sanitize(address = "on")]
//~^ ERROR the `#[sanitize]` attribute is an experimental feature
fn main() {
}
